# db-fs

./: .flake8  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README1.md  README_SYNC.md  SYNC_DEPLOYMENT.md  database_triggers.sql  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_sync.txt  setup.py  sync_service.py  sync_system.py
.github/workflows/: ci.yml  release.yml
examples/: advanced_usage.py  basic_usage.py
feishu_bitable_db/: __init__.py
feishu_bitable_db/client/: __init__.py  bitable.py  drive.py
feishu_bitable_db/db/: __init__.py  conv.py  db.py  field.py  record.py  types.py
feishu_bitable_db/internal/: __init__.py  faker.py
feishu_bitable_db/sync/: __init__.py
feishu_db_sync/: __init__.py
feishu_db_sync/config/: __init__.py  config.py
feishu_db_sync/core/: __init__.py  field_mapper.py  sync_service.py  sync_worker.py
feishu_db_sync/db/: __init__.py  database.py  models.py  queue_processor.py
feishu_db_sync/feishu/: __init__.py  change_detector.py  client.py
feishu_db_sync/monitor/: __init__.py  logger.py  metrics.py
feishu_db_sync/tests/: test_sync.py
scripts/: install.sh
tests/: test_db.py
